<resources>
    <string name="app_name">ICAN</string>
    <string name="tagLine">Teknologi Pembudidayaan Ikan Bertenaga Surya Terintegrasi Urban Farming Berbasis IoT</string>
    <string name="food">Beri Makan</string>
    <string name="water">Kualitas Air</string>
    <string name="prediction">Prediksi</string>
    <string name="settings">Pengaturan</string>
    <string name="polsri">logo polsri</string>
    <string name="wave">gambar animasi Gelombang</string>
    <string name="foodDesc">Halaman ini menampilkan jumlah pakan ikan anda saat ini, Anda juga dapat mengatur waktu pemberitahuan makan ikan, dan Anda dapat memberikan pakan ikan dengan cara menekan tombol Beri Pakan
    </string>
    <string name="waterDesc">Halaman ini menampilkan Kualitas Air Kolam Anda</string>
</resources>